After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666109 - GtkFrame: Fix a casting in the compute_child_allocation() method
GtkFrame: Fix a casting in the compute_child_allocation() method
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-12-13 18:26 UTC by Claudio Saavedra
Modified: 2011-12-13 18:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkFrame: Fix a casting in the compute_child_allocation() method (1.46 KB, patch)
2011-12-13 18:26 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2011-12-13 18:26:29 UTC
The casting used to calculate the child allocation is confusing MAX().
As a result, width and height end up with negative values, which makes no sense.
Comment 1 Claudio Saavedra 2011-12-13 18:26:32 UTC
Created attachment 203358 [details] [review]
GtkFrame: Fix a casting in the compute_child_allocation() method
Comment 2 Carlos Garnacho 2011-12-13 18:44:10 UTC
Comment on attachment 203358 [details] [review]
GtkFrame: Fix a casting in the compute_child_allocation() method

Very nice catch, it looks fine to me
Comment 3 Claudio Saavedra 2011-12-13 18:51:48 UTC
Pushed as 064204da9b4 into master.