gtk/gtkframe.c
@@ -835,10 +835,10 @@ gtk_frame_real_compute_child_allocation (GtkFrame      *frame,
 
   child_allocation->x = border_width + padding.left;
   child_allocation->y = border_width + top_margin;
-  child_allocation->width = MAX (1, (gint) allocation.width - (border_width * 2) -
-                                 padding.left - padding.right);
-  child_allocation->height = MAX (1, ((gint) allocation.height - child_allocation->y -
-                                      border_width - padding.bottom));
+  child_allocation->width = MAX (1, (gint) (allocation.width - (border_width * 2) -
+					    padding.left - padding.right));
+  child_allocation->height = MAX (1, (gint) (allocation.height - child_allocation->y -
+					     border_width - padding.bottom));
 
   child_allocation->x += allocation.x;
   child_allocation->y += allocation.y;
